# JUCE

./: README.md
.github/workflows/: build-apk.yml  build-daw.yml
examples/CMake/: CMakeLists.txt
examples/CMake/DawApp/: CMakeLists.txt  ChordPaletteComponent.cpp  ChordPaletteComponent.h  DrumSequencerComponent.cpp  DrumSequencerComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiEngine.h  MusicTheoryEngine.cpp  MusicTheoryEngine.h  PianoRollComponent.cpp  PianoRollComponent.h  build-android-apk.sh
modules/juce_audio_devices/native/oboe/: CMakeLists.txt
